# MegaManZeroRecomp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  baserom.md  game.toml
recomp/launcher/: boxart.tga
src/: main.cpp  mmz_extended_view.cpp  mmz_extended_view.h
symbols/: README.md
tools/: analyze_ppm_diff.py  capture_iwram.py  compare_nba_lockstep.py  make_release.ps1  play-discovery.ps1  probe_native_route.py  regen.ps1  review_misses.py  run-nba-oracle.ps1  verify-strict.ps1
