cmake_minimum_required(VERSION 3.20)
project(MegaManZeroRecomp C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(GBARECOMP_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../gbarecomp"
    CACHE PATH "Path to the sibling gbarecomp checkout")
if(NOT EXISTS "${GBARECOMP_ROOT}/CMakeLists.txt")
    message(FATAL_ERROR
        "GBARECOMP_ROOT is not a gbarecomp checkout:\n"
        "  ${GBARECOMP_ROOT}\n"
        "Clone gbarecomp next to this repository or configure with "
        "-DGBARECOMP_ROOT=<path>.")
endif()

add_subdirectory("${GBARECOMP_ROOT}" gbarecomp_build EXCLUDE_FROM_ALL)

file(GLOB GAME_GENERATED_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/generated/*.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/generated/*.cpp")

add_executable(MegaManZeroRecomp
    src/main.cpp
    src/mmz_extended_view.cpp
    ${GAME_GENERATED_SOURCES}
)

# Keep generated guest translation units at a bounded optimization/debug-info
# cost. gba_recompile partitions them into stable shards; the dispatch table and
# symbol map remain ordinary small generated units.
set(GAME_RECOMPILED_SOURCES ${GAME_GENERATED_SOURCES})
list(FILTER GAME_RECOMPILED_SOURCES INCLUDE REGEX
    "/recompiled(_[0-9]+)?\\.cpp$")
if(GAME_RECOMPILED_SOURCES)
    set_source_files_properties(${GAME_RECOMPILED_SOURCES} PROPERTIES
        COMPILE_OPTIONS "-O1;-g0")
endif()

target_include_directories(MegaManZeroRecomp PRIVATE
    "${GBARECOMP_ROOT}/src/armv4t"
    "${GBARECOMP_ROOT}/src/gba"
    "${GBARECOMP_ROOT}/src/runtime"
    "${GBARECOMP_ROOT}/src/debug")

target_link_libraries(MegaManZeroRecomp PRIVATE
    "-Wl,--start-group"
    gbarecomp_runtime
    gbarecomp_debug
    gbarecomp_gba
    gbarecomp_armv4t
    "-Wl,--end-group")

target_compile_definitions(MegaManZeroRecomp PRIVATE
    GBARECOMP_DEFAULT_DEBUG_PORT=19862
    GBARECOMP_WINDOW_TITLE="MegaManZeroRecomp"
    GBARECOMP_DEFAULT_GAME_CONFIG="game.toml")

if(MSVC)
    target_link_options(MegaManZeroRecomp PRIVATE /STACK:16777216)
elseif(MINGW OR WIN32)
    target_link_options(MegaManZeroRecomp PRIVATE -Wl,--stack,16777216)
endif()
